--- a/.github/workflows/dsj.yml
+++ b/.github/workflows/dsj.yml
@@ -26,7 +26,8 @@ jobs:
         run: |
           cd ~/JS
           node Task/dsj.js
-        env: 
+        env:
+          DSJ_dsjHEADER: ${{ secrets.DSJ_dsjHEADER }} 
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
 
