--- a/.github/workflows/ranlv.yml
+++ b/.github/workflows/ranlv.yml
@@ -27,6 +27,7 @@ jobs:
           cd ~/JS
           node Task/ranlv.js
         env: 
+          RLURL: ${{ secrets.RLURL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
 
