--- a/.github/workflows/ranlv.yml
+++ b/.github/workflows/ranlv.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/YiBai12/JS.git ~/JS
+          git clone https://github.com/lcq61872/JS.git ~/JS
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
