--- a/.github/workflows/ranlv.yml
+++ b/.github/workflows/ranlv.yml
@@ -26,5 +26,9 @@ jobs:
         run: |
           cd ~/JS
           node Task/ranlv.js
+        env:
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+
 
 
